--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,13 @@ section {
     margin-bottom: 20px;
 }
 
+.h-lines {
+    width: 55px;
+    height: 2px;
+    background-color: white;
+    margin-bottom: 20px;
+}
+
 
 /* Nav section */
 .navbar .navbar-toggler {
@@ -112,6 +119,12 @@ section {
     height: 260px;
     margin: 15px 0;
     border: none;
+    border-radius: 10px;
+}
+
+.testimonials .container {
+    background-image: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
+    color: white;
     border-radius: 10px;
 }
 
